# azlyrics_api

./: .dockerignore  Dockerfile  Procfile  README.md  pyproject.toml  readme.md  run.py
.github/workflows/: ci.yaml
azlyrics/: __init__.py  exceptions.py  utils.py
tests/: test_azlyrics_api.py
