[tool.poetry]
name = "azlyrics_api"
version = "0.1.0"
description = ""
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
azapi = "^3.0.6"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
slowapi = "^0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
